# SurveyHelper

./: .gitignore  README.md  analyze.py  fetch.py  justfile  pyproject.toml
.github/: renovate.json5
docs/: configuration.md  faq.md  getting_started.md
survey_helper/: __init__.py
survey_helper/analyze/: __init__.py  exporter.py  judge.py  paper_loader.py
survey_helper/core/: __init__.py  config.py  logging_config.py  models.py
survey_helper/fetch/: __init__.py  downloader.py  processors.py
survey_helper/utils/: __init__.py  checkpoint.py  filters.py
