[project]
name = "survey-helper"
version = "0.2.0"
description = "Academic paper relevance analysis tool for research surveys"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ollama>=0.5.3",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.6.1",
    "requests>=2.28.0",
    "rich>=13.0.0",
]
